; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/power/extr_swap.c_swsusp_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/power/extr_swap.c_swsusp_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@resume_bdev = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"PM: Image device not initialised\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @swsusp_close(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @resume_bdev, align 4
  %4 = call i64 @IS_ERR(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = call i32 @pr_debug(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %12

8:                                                ; preds = %1
  %9 = load i32, i32* @resume_bdev, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @blkdev_put(i32 %9, i32 %10)
  br label %12

12:                                               ; preds = %8, %6
  ret void
}

declare dso_local i64 @IS_ERR(i32) #1

declare dso_local i32 @pr_debug(i8*) #1

declare dso_local i32 @blkdev_put(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
